# mnemonica-py

./: README.md  pyproject.toml
